<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100px"
            android:layout_marginLeft="10dp"
            android:text="@string/regi"
            android:textSize="36dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/welcome"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="50px"
            android:background="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Fname"
                android:textSize="20dp"/>

            <TextView
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/gender"
                android:textSize="20dp"/>

            <TextView
                android:layout_marginTop="70dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/ID"
                android:textSize="20dp"/>

            <TextView
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/sch"
                android:textSize="20dp"/>

            <TextView
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/mail"
                android:textSize="20dp"/>

            <TextView
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/ph"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_marginTop="35dp"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/FN"
                    android:textSize="17sp"/>

                <EditText
                    android:layout_marginTop="35dp"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:hint="@string/LN"
                    android:textSize="17sp"/>
            </LinearLayout>


            <CheckBox
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/gender1"/>

            <CheckBox
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/gender2"/>

            <EditText
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/ID"
                android:textSize="17sp"/>

            <EditText
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/sch"
                android:textSize="17sp"/>

            <EditText
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/mail"
                android:textSize="17sp"/>

            <EditText
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ph"
                android:textSize="17sp" />

            <Button
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regi2"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>